content changes based on changelog

--- a/app/views/layinghens/current/eligibility/biosecurity/concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/concrete-apron.html
@@ -29,7 +29,7 @@
                     }
                 },
                 hint: {
-                    text: 'This must include the veranda if there is range space next to the building'
+                    text: 'If there is no range next to the building, there must also be a concrete apron around the veranda'
                 },
                 items: [
                     {
@@ -67,10 +67,7 @@
                 </h2>
 
                 <p>
-                The building and veranda must be surrounded by a continuous strip of concrete.</p>
-
-                <p>
-                You do not have to include the veranda if there is range space next to the building, for example, for barn systems
+                    The building and veranda must be surrounded by a continuous strip of concrete.
                 </p>
             </div>
 
