--- a/app/views/layinghens/current/eligibility/biosecurity/elim-concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/elim-concrete-apron.html
@@ -15,7 +15,11 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The housing and any barn system veranda areas must be surrounded by a continuous concrete apron (a hardstanding concrete area).
+                    The building and veranda must be surrounded by a continuous strip of concrete.
+                </p>
+
+                <p>
+                    If there is no range next to the building, there must also be a concrete apron around the veranda.
                 </p>
 
                 <p>
