--- a/app/views/layinghens/current/eligibility/biosecurity/elim-external-taps.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/elim-external-taps.html
@@ -15,7 +15,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    There must be an external tap to manage external footbaths at every pedestrian access point to the housing.
+                    There must be an external tap at each main pedestrian access point to manage external footbaths.
                 </p>
 
                 <p>
