--- a/app/views/layinghens/current/eligibility/biosecurity/external-taps.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/external-taps.html
@@ -63,7 +63,9 @@
                 <h2 class="app-step-nav-related__heading">
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
-                <p>There must be an external tap to manage external footbaths at every pedestrian access point to the housing.</p>
+                <p>
+                    There must be an external tap at each main pedestrian access point to manage external footbaths.
+                </p>
             </div>
         </div>
 
