--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    Will the roof of the grant-funded housing be able to support solar PV panels?
+    Will the roof of the building be able to support solar PV panels?
 {% endblock %}
 
 {% block content %}
@@ -26,7 +26,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the roof of the grant-funded housing be able to support solar PV panels?',
+                            text: 'Will the roof of the building be able to support solar PV panels?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
@@ -70,20 +70,28 @@
                     <h2 class="app-step-nav-related__heading">
                     <span class="app-step-nav-related__pretitle">Eligibility</span>
                     </h2>
-                    <p>The roof must be able to support solar PV panels, allowing for potential use in the future.</p>
+                    <p>
+                        The roof must be able to support solar PV panels, allowing for potential use in the future.
+                    </p>
                      <p class="govuk-hint"> 
                         Your roof is exempt if:
                     </p>
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
-                            the building is listed or on a World Heritage Site
+                            the building is listed
+                        </li>
+                        <li>
+                            the building is on a World Heritage Site
                         </li>
                         <li>
                             you're upgrading an existing building and would not otherwise make changes to the roof
                         </li>
                         <li>
-                            the roof faces only north or is heavily shaded
+                            the roof faces only north
+                        </li>
+                        <li>
+                            the roof is heavily shaded
                         </li>
                         <li>
                             the roof does not have 100m<sup>2</sup> of clear roof space
