--- a/app/views/layinghens/current/eligibility/biosecurity/changing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/changing-area.html
@@ -20,18 +20,22 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The building must have a biosecure changing area at each external pedestrian point with:
+                        The building must have a biosecurity changing area at each external pedestrian point.
+                    </p>
+
+                    <p class="govuk-hint">
+                        This must include:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
                         <li>
-                            changing facilities, divided by a floor-mounted physical barrier into a clean area and a dirty area
+                            changing facilities, with a floor-mounted physical barrier between the outer and inner biosecure areas
                         </li>
                         <li>
-                            in the dirty area, handwashing facilities and storage for clothes and boots that you use outside of the housing
+                           in the outer area, handwashing facilities and storage for clothes and boots that you use outside of this building
                         </li>
                         <li>
-                            in the clean area, a footbath and storage for clothes and boots that you use inside of the shed
+                            in the inner area, a footbath and storage for clothes and boots that you use inside of the bird living area
                         </li>
                     </ul>
 
