--- a/app/views/layinghens/current/eligibility/solar/solar-pv-system.html
+++ b/app/views/layinghens/current/eligibility/solar/solar-pv-system.html
@@ -34,7 +34,7 @@
                  {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        You can choose to buy and install a solar PV system on the grant-funded housing as part of this grant.
+                        You can choose to buy and install a solar PV system that will provide energy to the building as part of this grant.
                     </p>
 
                     <p class="govuk-hint"> 
