--- a/app/views/layinghens/current/eligibility/aviary/features.html
+++ b/app/views/layinghens/current/eligibility/aviary/features.html
@@ -20,15 +20,15 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The aviary system must have:
+                        The aviary system must have integrated:
                     </p>
 
                     <ul class="govuk-list govuk-list--bullet govuk-hint">
                         <li>
-                            manure removal belts
+                            automatic manure removal belts
                         </li>
                         <li>
-                            integrated non-flicker LED lighting at each level (including under the system) capable of automatically simulating dawn and dusk
+                            non-flicker LED lighting at each level (including under the system) capable of automatically simulating dawn and dusk
                         </li>
                     </ul>
 
@@ -84,7 +84,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The aviary system must have an integrated automatic manure-removal system and a modern lighting system.
+                    The aviary system must have an integrated automatic manure removal belt and non-flicker LED lighting system
                 </p>
             </div>
 
