Updates based on changelog

--- a/app/views/layinghens/current/scoring/features.html
+++ b/app/views/layinghens/current/scoring/features.html
@@ -46,12 +46,12 @@
                             checked: true if 'Manure drying' | isIn(data['scoring-features'])
                         },
                         {
-                            text: 'Air filtration at inlets (to improve biosecurity)',
+                            text: 'Air filtration at inlets',
                             value: 'Air filtration at inlets',
                             checked: true if 'Air filtration at inlets' | isIn(data['scoring-features'])
                         },
                         {
-                            text: 'Air filtration at outlets (to reduce emissions), for example using wet or dry scrubbers',
+                            text: 'Air filtration at outlets, for example using wet or dry scrubbers',
                             value: 'Air filtration at outlets',
                             checked: true if 'Air filtration at outlets' | isIn(data['scoring-features'])
                         },
@@ -89,7 +89,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA want to fund projects that use pollution mitigation practices.
+                    RPA want to fund projects that improve biosecurity and use pollution mitigation practices.
                 </p>
             </div>
 
