--- a/app/views/layinghens/current/scoring/natural-light.html
+++ b/app/views/layinghens/current/scoring/natural-light.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing have windows to provide natural light?
+    Will the building have windows that provide natural light to the indoor housing?
 {% endblock %}
 
 {% block content %}
@@ -21,19 +21,36 @@
                 <form action="grip">
             {% endif %}
 
+                {% set hintHtml %}
+
+                    <p class="govuk-hint">
+                        The windows must be: 
+                    </p>
+
+                    <ul class="govuk-list govuk-list--bullet govuk-hint">
+                        <li>
+                            fitted with an insulated blind to manage light intensity and housing temperature
+                        </li>
+                        <li>
+                            equal to at least 3% of size of the bird space footprint
+                        </li>
+                    </ul>
+
+                {% endset %}
+
                 {{ govukRadios ({
                     idPrefix: 'scoring-natural-light',
                     name: 'scoring-natural-light',
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the ' + poultryType + ' housing have windows to provide natural light?',
+                            text: 'Will the building have windows that provide natural light to the indoor housing?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
                     hint: {
-                        text: 'The windows in the housing must be fitted with an insulated blind and be equal to at least 3% of size of the bird space footprint'
+                        html: hintHtml
                     },
                     items: [
                         {
@@ -64,8 +81,25 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA want to support projects which provide natural light.
+                    RPA want to support projects which provide indoor housing with natural light.
                 </p>
+                <p>
+                    Hens and pullets prefer natural light spectrums.
+                </p>
+                <p>
+                    Natural light can:
+                </p>
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        promote positive, active behaviour
+                    </li>
+                    <li>
+                        improved visibility to help reduce collisions between birds 
+                    </li>
+                    <li>
+                        increase range use
+                    </li>
+                </ul>
             </div>
 
         </div>
