--- a/app/views/layinghens/current/scoring/structure.html
+++ b/app/views/layinghens/current/scoring/structure.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing structure include the following?
+    Will the building structure include the following?
 {% endblock %}
 
 {% block content %}
@@ -27,7 +27,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the ' + poultryType + ' housing structure include the following?',
+                            text: 'Will the building structure include the following?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
@@ -37,17 +37,17 @@
                     },
                     items: [
                         {
-                            text: 'Shower-in-facilities in the housing’s lobby or changing room',
+                            text: 'Shower-in-facilities in the lobby or changing room area',
                             value: 'Shower-in-facilities',
                             checked: true if 'Shower-in-facilities' | isIn(data['scoring-structure'])
                         },
                         {
-                            text: 'An externally accessible storage space with a separate air space',
-                            value: 'An externally accessible storage space',
+                            text: 'An integrated externally accessible storage room with a separate air space',
+                            value: 'An integrated externally accessible storage room',
                             hint: {
                                 text: 'To create a separate air space, the area must have solid ceiling height walls, providing a secure barrier from the bird living area'
                             },
-                            checked: true if 'An externally accessible storage space' | isIn(data['scoring-structure'])
+                            checked: true if 'An integrated externally accessible storage room' | isIn(data['scoring-structure'])
                         },
                         {
                             divider: 'or'
@@ -79,6 +79,9 @@
                 </h2>
                 <p>
                     RPA want to support projects that include a high standard of biosecurity measures which protect against the spread of disease and infection.
+                </p>
+                <p>
+                    An integrated storage room can provide biosecure storage for items for the building such as litter, enrichment items and welfare ramps.
                 </p>
             </div>
 
