--- a/app/views/layinghens/current/scoring/height.html
+++ b/app/views/layinghens/current/scoring/height.html
@@ -33,8 +33,8 @@
                         }
                     },
                     hint: {
-                        text: 'The height of the highest tier in the multi-tier system from the litter floor area to the underside of the manure belt.'
-                    }
+                        text: 'The height of the highest tier in the multi-tier system from the litter floor area to the underside of the manure belt'
+                    },
                     items: [
                         {
                             text: 'Yes',
