--- a/app/views/layinghens/current/details/interruption.html
+++ b/app/views/layinghens/current/details/interruption.html
@@ -13,20 +13,28 @@
             <div class="govuk-grid-column-two-thirds">
 
                 <h1 class="govuk-heading-l">
-                    1. Check if your project is eligible for a grant
+                    3. Confirm and submit
                 </h1>
 
                 <p>
-                    The first section of this service will check if your project is eligible for this grant.
+                    This section will ask specific details about your project and business.
                 </p>
 
                 <p>
-                    You will not be able to apply if any of your answers do not meet the eligibility criteria.
+                    These details will be used to help you start a full application for grant funding.
+                </p>
+
+                <h2 class="govuk-heading-m">
+                    Multiple projects
+                </h2>
+
+                <p>
+                    So we can assess multiple projects for the same business, you must enter the same business details on all of your submissions.
                 </p>
                 
                 {{ govukButton ({
                     text: 'Continue',
-                    href: 'common/project-type',
+                    href: 'business-details',
                     classes: 'govuk-button--inverse'
                 }) }}
 
