--- a/app/views/layinghens/current/eligibility/funding/remaining-cost.html
+++ b/app/views/layinghens/current/eligibility/funding/remaining-cost.html
@@ -37,7 +37,7 @@
                         value: 'Yes',
                         checked: true if data['remaining-cost'] == 'Yes',
                         attributes: {
-                            'data-next': '../../scoring/current-system'
+                            'data-next': '../../scoring/interruption'
                         }
                     },
                     {
