--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -90,7 +90,7 @@
 
       {{ govukButton({
         text: "Start now",
-        href: "eligibility/interruption",
+        href: "interruption-steps",
         isStartButton: true
       }) }}
 
